--- a/public/frontend/css/products/details_page.css
+++ b/public/frontend/css/products/details_page.css
@@ -72,6 +72,23 @@ img{
     padding: 0 0.3rem;
     transition: all 0.5s ease;
 }
+
+.review-form {
+    max-width: 500px;
+}
+.review-form input[type=text] {
+    height: 30px;
+    width: 100%;
+    border: 1px solid #ddd;
+}
+.review-form .label {
+    margin: 15px 0;
+}
+textarea {
+    border: 1px solid #ddd;
+    width: 100%;
+    min-height: 200px;
+}
 .product-link:hover{
     opacity: 0.9;
 }
@@ -257,4 +274,12 @@ img{
 .tab-panel {
     padding: 30px 0;
     border-top: 1px solid #ccc;
+}
+
+.tab-panel .title {
+    margin-bottom: 20px;
+}
+
+.tab-panel .review-item {
+    margin: 15px 0;
 }
